# vlfeatdemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.cpp  slic.cpp
