cmake_minimum_required(VERSION 3.12)
if (EXISTS /opt/vcpkg)
    set(CMAKE_TOOLCHAIN_FILE "/media/wbc/workspace/opt/vcpkg9.2/scripts/buildsystems/vcpkg.cmake")
endif ()
project(demo LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 11)
include_directories(3rdparty/vlfeat/)
link_directories(3rdparty/vlfeat/bin/glnxa64/)
add_executable(demo demo.cpp)
target_link_libraries(demo vl)
