cmake_minimum_required(VERSION 3.12)
if (EXISTS /opt/vcpkg)
    set(CMAKE_TOOLCHAIN_FILE "/opt/vcpkg/scripts/buildsystems/vcpkg.cmake")
endif ()
project(demo LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 11)
find_package(OpenCV REQUIRED)
find_package(freetype)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(3rdparty/vlfeat/)
link_directories(3rdparty/vlfeat/bin/glnxa64/)
add_executable(slic slic.cpp)
target_link_libraries(slic vl ${OpenCV_LIBS} freetype)
